Fix indentation. Add names to steps.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,13 +11,15 @@ jobs:
     steps:
       - checkout
       - run:
-        name: update-npm
-        command: 'sudo npm install -g npm@latest'
+          name: update npm
+          command: sudo npm install -g npm@latest
       - restore_cache:
           keys:
             - v1-dependencies-{{ checksum "package.json" }}
             - v1-dependencies-
-      - run: npm install
+      - run:
+          name: install dependencies
+          command: npm install
       - save_cache:
           paths:
             - node_modules
