--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,7 @@
-# JavaScript Node CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-javascript/ for more details
-#
-version: 2
-jobs:
-  build:
-    docker:
-      - image: circleci/node:lts
-    working_directory: ~/google-optimize-service
+# https://circleci.com/docs/2.1/language-javascript/
+version: 2.1
+commands:
+  setup:
     steps:
       - checkout
       - run:
@@ -24,9 +18,33 @@ jobs:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
+
+workflows:
+  version: 2
+  test:
+    when: always
+    jobs:
+      - lint
+      - test
+jobs:
+  lint:
+    docker:
+      - image: circleci/node:lts
+    working_directory: ~/google-optimize-service
+    steps:
+      - setup
       - run:
           name: lint
-          command: npm run lint
+          command: npm run lint:ci
+      - store_test_results:
+          path: test-results
+
+  test:
+    docker:
+      - image: circleci/node:lts
+    working_directory: ~/google-optimize-service
+    steps:
+      - setup
       - run:
           name: unit tests
           command: npm test:ci
