Fix lint tasks.

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "test": "jest --env=jsdom",
     "test:ci": "jest --runInBand --no-cache --ci --reporters='default' --reporters='jest-junit' --passWithNoTests",
     "tdd": "jest --env=jsdom --watch",
-    "lint": "eslint -c .eslintrc.json \"!(lib)/**/*.{js}\"",
-    "lint:ci": "eslint --format junit -o test-results/eslint/results.xml -c .eslintrc.json \"!(lib)/**/*.{js}\"",
+    "lint": "eslint -c .eslintrc.json \"!(lib)/**/*.js\"",
+    "lint:ci": "eslint --format junit -o test-results/eslint/results.xml -c .eslintrc.json \"!(lib)/**/*.js\"",
     "prepublishOnly": "npm run build"
   },
   "jest-junit": {
