--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ commands:
       - run:
           name: extract version
           command: |
-            echo 'export VERSION=$(head -n1 CHANGELOG.md | grep -o \'\([0-9]\+\.\)\{2\}[0-9]\+\')' >> $BASH_ENV
+            echo 'export VERSION=$(head -n1 CHANGELOG.md | grep -o \'\([0-9]\+\.\)\{2\}[0-9]\+\)\'' >> $BASH_ENV
       - run:
           name: verify version
           command: |
