--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,8 @@ commands:
       - run:
           name: extract version
           command: |
-            echo 'export VERSION=$(head -n1 CHANGELOG.md | grep -o \'\([0-9]\+\.\)\{2\}[0-9]\+\)\'' >> $BASH_ENV
+            VERSION=$(head -n1 CHANGELOG.md | grep -o '\([0-9]\+\.\)\{2\}[0-9]\+')
+            echo "export VERSION=${VERSION}" >> $BASH_ENV
       - run:
           name: verify version
           command: |
