Add branch to artifact name.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,5 +81,5 @@ jobs:
           command: npm run build
       - store_artifacts:
           path: lib
-          destination: "google-optimize-service.${VERSION}"
+          destination: "google-optimize-service.${VERSION}-branch:${CIRCLE_BRANCH}"
 
