--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -104,9 +104,7 @@ jobs:
       - persist_to_workspace:
           root: ./
           paths:
-            - lib
-            - src/package-tests
-            - package.json
+            - '!(node_modules)'
 
   bundle-test-node-js:
     docker:
