--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -104,7 +104,7 @@ jobs:
       - persist_to_workspace:
           root: ./
           paths:
-            - '!(node_modules)'
+            - './!(node_modules)'
 
   bundle-test-node-js:
     docker:
