--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "google-optimize-service",
   "version": "0.2.0",
-  "description": "Handy universal service abstraction around Google Optimize.",
+  "description": "Highly customizable, dependency-free, universal, service abstraction around Google Optimize.",
   "main": "lib/google-optimize-service.node.js",
   "module": "lib/google-optimize-service.esm.js",
   "unpkg": "lib/google-optimize-service.min.js",
